v2.0.14: 修复关键前后端Bug和安全问题
- 修复 PasswordReset.vue 字段名错误(password→newPassword)
- 修复 CirclePost.vue 9个未声明响应式变量+form.location
- 修复 PostEdit.vue renderedContent预览+autoSaveTimer自动保存
- 修复 PostDetail.vue 浏览量未递增
- 修复 Circle.vue topicId→topicIds + logger声明补全
- 修复 SecurityConfig 3个公开端点+2个死规则
- 增强 UserLoginRequest @AssertTrue 校验
- 增强 密码DTO maxSize=128 防bcrypt DoS
- 统一 SendRegisterCodeRequest 用户名最小长度为6